# rust-digikam-orm

./: .envrc  .gitattributes  Cargo.toml  Justfile  LICENSE  README.md  Readme.org  manifest.scm
etc/digikam-files/database/: digikam4.db  recognition.db  similarity.db  thumbnails-digikam.db
etc/pictures/.dtrash/: digikam.uuid
etc/pictures/Nature/: Flowers.tif
etc/pictures/Nature/Animals/: Turtle.jpg.xmp
etc/pictures/Trains/: Train Museam Volunteer.jpg.xmp
migrations/2026-03-10-020327-0000_schema/: up.sql
src/: db.rs  lib.rs  schema.rs
src/models/: albums.rs  images.rs  mod.rs  models.rs  tags.rs  traits.rs
tests/: orm.rs
tests/fixtures/: db.sql
