[package]
name = "rust-digikam-orm"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/afistfullofash/rust-digikam-orm"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "time"] }
dirs = "6.0.0"
clap = { version = "4.5.32", features = ["derive", "env"] }
confique = { version = "0.3.0", features = ["json5", "toml"] }
homedir = "0.3.6"
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
wallpaper-ng = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
dark-light = "2.0.0"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enquote = "1.1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
wallpaper-ng = { path = "third_party/wallpaper-ng" }
