[package]
name = "rust-digikam-orm"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/afistfullofash/rust-digikam-orm"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "time"] }
dirs = "6.0.0"
clap = { version = "4.5.32", features = ["derive", "env"] }
confique = { version = "0.3.0", features = ["json5"] }
homedir = "0.3.6"
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
wallpaper-ng = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
dark-light = "2.0.0"
thiserror = "2.0.18"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enquote = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
wallpaper-ng = { path = "third_party/wallpaper-ng" }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
